# msgpack-fastapi-react

./: README.md
.devcontainer/: devcontainer.json  setup.sh
back/: README.md  data_pb2.py  main.py  pyproject.toml
front/: package-lock.json  package.json
front/public/: data.proto
front/src/: App.css  App.tsx
